--- a/shopweb/web/templates/order_ro.html
+++ b/shopweb/web/templates/order_ro.html
@@ -86,8 +86,6 @@ table tr th {
 #opts ul li {
 	text-align: left;
 }
-
-
 </style>
 </head>
 
@@ -152,6 +150,9 @@ table tr th {
           <td align="center" class="c4" id="opts"></td>
         </tr>
       </table>
+      <div class="transport">
+        <span data-snip="transport"> </span>
+      </div>
       <div class="total">
         <h3>
           Total <span data-snip="total"></span> Lei
