--- a/shopweb/web/templates/cartitem.html
+++ b/shopweb/web/templates/cartitem.html
@@ -9,7 +9,7 @@
       </ul>
     </div>
     <div class="column del_cart_item">
-      <a href="#"><img src="/static/images/close.png" /></a>
+      <a href="#" class="closeBtn"><img src="/static/images/close.png" /></a>
     </div>
   </div>
 </div>
