--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -346,7 +346,7 @@ a:active {
 }
 
 #pleft {
-	width: 340px;
+	width: 360px;
 	float: left;
 }
 
@@ -357,7 +357,7 @@ a:active {
 }
 
 .quickview #pright {
-	width: 710px;
+	width: 700px;
 }
 
 #product_title {
@@ -491,6 +491,10 @@ h1 {
 	border-radius: 10px;
 	display: inline-block;
 	width: 400px;
+}
+
+.cart_item_box a {
+	float: left;
 }
 
 .cart_item {
@@ -699,9 +703,28 @@ h1 {
 	float: right;
 }
 
-#gallery img {
-	border: 2px solid white;
+#gallery {
+    height: 121px;
+    overflow: hidden;
+    width: 302px;
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
 }
+
+#gallery_left, #gallery_right {
+	margin-top: 45px;
+}
+
+#gallery ul {
+	width: 4000px;
+	transition: transform 0.5s ease-in-out;
+}
+
+#gallery ul li {
+	float: left;
+}
+
 
 .active img {
 	border: 1px solid #dddddd !important;
