--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -13,7 +13,14 @@
     <div id="pleft">
       <div data-snip="images">
         <div id="detail_box">
-          <b:img />
+          <b:img id="sel_img"></b:img>
+          <span id="gallery_left" class="left clickable"> <img src="/static/images/left.png"/> </span>
+          <div id="gallery">
+            <ul>
+              <li id="thumb"><a href="#"></a></li>
+            </ul>
+          </div>
+          <span id="gallery_right" class="left clickable"> <img src="/static/images/right.png"/> </span>
         </div>
       </div>
     </div>
