--- a/shopweb/web/templates/categorieslist.html
+++ b/shopweb/web/templates/categorieslist.html
@@ -1,16 +1,17 @@
 <ul>
   <li data-permissions="write">
     <div class="cat_box cat_add_item">
+      <div class="sprite sprite-add-item-small"></div>
     </div>
   </li>
   <li data-snip="item">
     <div class="cat_box">
       <div class="edit_tag">
         <div class="edit_tag_close" data-permissions="write">
-          <img src="/static/images/close.png" />
+          <span class="sprite sprite-close" />
         </div>
         <div class="edit_tag_update" data-permissions="write">
-          <img src="/static/images/edit.png" />
+          <img class="sprite sprite-edit" />
         </div>
       </div>
       <div class="info_tag cat_info_tag">
