--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,20 +1,21 @@
 <ul>
   <li data-permissions="write">
     <div class="item_box add_item">
+       <div class="sprite sprite-add-item"></div>
     </div>
   </li>
   <li data-snip="item">
     <div class="item_box">
       <div class="edit_tag">
          <div class="edit_tag_close" data-permissions="write">
-            <img src="/static/images/close.png" />
+            <span class="sprite sprite-close" />
          </div>
       </div>
       <div id="unique_ribbon" class="unique_label" data-loc="unique"></div>
       <div class="info_tag">
         <div class="info_tag_text"></div>
         <div class="info_tag_cart">
-          <img src="/static/images/cart_black.png" />
+          <span class="sprite sprite-cart_black" />
         </div>
         <div class="info_tag_price"></div>
       </div>
