--- a/shopweb/web/templates/ordersview.html
+++ b/shopweb/web/templates/ordersview.html
@@ -103,12 +103,14 @@
           <th data-loc="title"></th>
           <th data-loc="quantity"></th>
           <th data-loc="unit.price"></th>
+          <th data-loc="customize"></th>
         </tr>
         <tr class="order_items">
           <td align="center"><img class="c1" width="50" height="57" /></td>
           <td align="center" class="c2"></td>
           <td align="center" class="c3"></td>
           <td align="center" class="c4"></td>
+          <td align="center" class="c5" ></td>
         </tr>
       </table>
 
