--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -69,10 +69,8 @@
         </div>
 
         <div id="prod_customize" class="prod_specs tab_content">
-          <div data-snip="customize">
-            <div class="row_simple top10">
-              <span class="content"></span>
-            </div>
+          <div class="row top10" data-snip="customize">
+            <span class="content"></span>
           </div>
         </div>
 
@@ -163,7 +161,8 @@
                   <div class="edit_user_options">
                     <div class="edit_custom_options_sample">
                       <div class='row'>
-                        <input type='text' name='customkey' /> <input type='text' name='customval' /> <span class='clickable sprite sprite-minus top5' />
+                        <input type='text' name='customkey' /> <input type='text' name='customval' /> <span
+                          class='clickable sprite sprite-minus top5' />
                       </div>
                     </div>
                     <div class="edit_custom_text_sample">
