--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -7,6 +7,8 @@
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
 <link href='http://fonts.googleapis.com/css?family=Julee' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+<link href="/static/css/sprite.css" rel="stylesheet" type="text/css" />
+
 
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
 <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
