--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -1257,18 +1257,17 @@ h1 {
 
 .unique_label {
 	width: 200px;
-	background: #e43;
+	background: #ccc;
 	position: absolute;
 	text-align: center;
 	line-height: 40px;
 	letter-spacing: 1px;
-	color: #f0f0f0;
+	color: #fff;
 	top: 15px;
 	right: -60px;
 	left: auto;
 	transform: rotate(45deg);
 	-webkit-transform: rotate(45deg);
-	background: #e60;
 	font-size: 20px;
 }
 
