--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<meta name="keywords" content="handmade, manual, bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc."/>
+<meta name="keywords" content="handmade, manual, bijuterii, jucarii, tablouri, vase ceramice si sticla, ceasuri, genti, perne etc." />
 
 
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css' />
@@ -20,15 +20,19 @@
 <script type="text/javascript" src="http://connect.facebook.net/ro_RO/all.js"></script>
 
 <script>
-
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-63050669-1', 'auto');
     ga('send', 'pageview');
-    
 </script>
 
 </head>
@@ -63,6 +67,7 @@
     <div id="notice_e"></div>
     <div id="notice_connect_e" data-snip="connect_error"></div>
     <div id="notice_i"></div>
+    <div id="content_head"></div>
     <div id="content"></div>
   </div>
 
@@ -199,7 +204,7 @@
             </div>
           </div>
           <div class="row">
-            <select id="transport_pf" class="transport"  name="transport">
+            <select id="transport_pf" class="transport" name="transport">
               <option value="1" data-loc="transport.1"></option>
               <option value="2" data-loc="transport.2"></option>
             </select>
