--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -8,6 +8,7 @@
 <link href='http://fonts.googleapis.com/css?family=Julee' rel='stylesheet' type='text/css' />
 <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/sprite.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 
 
 <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
@@ -75,22 +76,22 @@
     <div class="center">
       <div class="column">
         <ul>
-          <li>Copyright (c) 2014</li>
-          <li>E-mail: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
-          <li>Telefon: 0724-556226</li>
+          <li><i class="fa fa-copyright"></i>&amp;nbsp; Copyright (c) 2014</li>
+          <li><i class="fa fa-envelope-o"></i>&amp;nbsp; E-mail: <a href="mailto:office@idid.ro">office@idid.ro</a></li>
+          <li><i class="fa fa-phone"></i>&amp;nbsp; Telefon: 0724-556226</li>
         </ul>
       </div>
       <div class="column left30">
         <ul>
-          <li><a href="/terms" data-loc="terms.link"></a></li>
-          <li><a href="/dataprotection" data-loc="data.protection.link"></a></li>
-          <li><a href="/returnpolicy" data-loc="return.policy.link"></a></li>
+          <li><i class="fa fa-pencil"></i>&amp;nbsp;<a href="/terms" data-loc="terms.link"></a></li>
+          <li><i class="fa fa-database"></i>&amp;nbsp;<a href="/dataprotection" data-loc="data.protection.link"></a></li>
+          <li><i class="fa fa-reply"></i>&amp;nbsp;<a href="/returnpolicy" data-loc="return.policy.link"></a></li>
         </ul>
       </div>
       <div class="column left30">
         <ul>
+          <li><i class="fa fa-bars"></i>&amp;nbsp;<a href="/cookies" data-loc="data.cookies.link"></a></li>
           <li><a href="http://www.anpc.gov.ro/">ANPC</a></li>
-          <li><a href="/cookies" data-loc="data.cookies.link"></a></li>
         </ul>
       </div>
     </div>
