--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -203,7 +203,7 @@ a:active {
 	top: 60px;
 	height: 50px;
 	z-index: 10;
-	background-color: #f6f6f6;
+	background-color: #f8f8f8;
 }
 
 .wrap {
@@ -283,7 +283,7 @@ a:active {
 	width: 156px;
 	position: relative;
 	z-index: 0;
-	margin: 0 20px 20px 0;
+	margin: 0 25px 20px 25px;
 }
 
 .cat_box:hover {
@@ -300,7 +300,7 @@ a:active {
 	position: relative;
 	box-shadow: inset 0px 0px 1px 1px #ddd;
 	overflow: hidden;
-	margin: 0 40px 20px 0;
+	margin: 0 20px 20px 20px;
 }
 
 .item_box:hover {
