--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -1267,7 +1267,7 @@ h1 {
 
 .unique_label {
 	width: 200px;
-	background: #ccc;
+	background: #aaa;
 	position: absolute;
 	text-align: center;
 	line-height: 40px;
