--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -127,12 +127,12 @@
               </div>
               <div id="edit_specs" class="form_specs tab_content">
                 <div>
-                  <div class="specs_title" data-loc="add.specs"></div>
-                  <span id="edit_add_prop" class="clickable sprite sprite-plus" />
+                  <div id="edit_add_prop" class="left clickable sprite sprite-plus" ></div>
+                  <div class="specs_title left10" data-loc="add.specs"></div>
                 </div>
                 <div id="edit_prop_fields" class="row">
                   <div class="edit_props_sample">
-                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <span class='clickable sprite sprite-minus top5' />
+                    <input type='text' name='pkey' /> <input type='text' name='pval' /> <div class='clickable sprite sprite-minus top5' ></div>
                   </div>
                 </div>
               </div>
@@ -151,23 +151,26 @@
               <div id="edit_customize" class="form_specs tab_content">
                 <ul>
                   <li>
-                    <div class="specs_title" data-loc="add.options"></div> <span id="add_edit_custom_prop" class="clickable sprite sprite-plus" />
+                    <div id="add_edit_custom_prop" class="clickable sprite sprite-plus left" ></div>
+                    <div class="specs_title left10" data-loc="add.options"></div> 
                   </li>
                   <li>
-                    <div class="specs_title" data-loc="add.text"></div> <span id="add_edit_custom_text" class="clickable sprite sprite-plus" />
+                    <div id="add_edit_custom_text" class="clickable sprite sprite-plus left"></div>
+                    <div class="specs_title left10" data-loc="add.text"></div> 
                   </li>
                 </ul>
                 <div id="prop_edit_custom_fields" class="row">
                   <div class="edit_user_options">
                     <div class="edit_custom_options_sample">
                       <div class='row'>
-                        <input type='text' name='customkey' /> <input type='text' name='customval' /> <span
-                          class='clickable sprite sprite-minus top5' />
+                        <input type='text' name='customkey' /> <input type='text' name='customval' /> 
+                        <span class='clickable sprite sprite-minus top5 left left10' ></span>
                       </div>
                     </div>
                     <div class="edit_custom_text_sample">
                       <div class='row'>
-                        <input type='text' name='customtext' /> <span class='clickable sprite sprite-minus top5' />
+                        <input type='text' name='customtext' /> 
+                        <span class='clickable sprite sprite-minus top5 left left10' ></span>
                       </div>
                     </div>
                   </div>
